--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -14,6 +14,7 @@
             android:title="@string/menu_enlargers" />
         <item
             android:id="@+id/nav_papers"
+            android:visible="false"
             android:icon="@drawable/ic_menu_paper"
             android:title="@string/menu_papers" />
     </group>
