--- a/app/src/main/res/layout/fragment_about.xml
+++ b/app/src/main/res/layout/fragment_about.xml
@@ -54,4 +54,12 @@
             android:text="Copyright \u00A9 2020 Derek Konigsberg"
             android:textAppearance="@style/TextAppearance.AppCompat.Small" />
     </LinearLayout>
+
+    <ImageView
+        android:id="@+id/imageViewGithub"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="top|right"
+        android:src="@drawable/ic_forkme_github"
+        android:clickable="true" />
 </FrameLayout>
