--- a/app/src/main/res/layout/fragment_enlarger_edit.xml
+++ b/app/src/main/res/layout/fragment_enlarger_edit.xml
@@ -22,265 +22,160 @@
             android:paddingTop="@dimen/activity_vertical_margin"
             android:paddingBottom="256dp">
 
-            <LinearLayout
+            <com.google.android.material.textfield.TextInputLayout
+                android:id="@+id/editNameLayout"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_marginStart="@dimen/activity_horizontal_margin"
-                android:layout_marginEnd="@dimen/activity_horizontal_margin"
-                android:orientation="vertical">
+                android:layout_height="wrap_content"
+                android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
+                app:errorEnabled="true"
+                android:hint="@string/label_name">
 
-                <TextView
-                    android:id="@+id/textViewName"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="@string/label_name"
-                    android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
-
-                <EditText
+                <com.google.android.material.textfield.TextInputEditText
                     android:id="@+id/editName"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:inputType="text" />
-            </LinearLayout>
+            </com.google.android.material.textfield.TextInputLayout>
 
-            <View
-                android:id="@+id/dividerName"
+            <com.google.android.material.textfield.TextInputLayout
+                android:id="@+id/editDescriptionLayout"
                 android:layout_width="match_parent"
-                android:layout_height="1dp"
-                android:layout_marginTop="@dimen/activity_vertical_margin"
-                android:layout_marginBottom="@dimen/activity_vertical_margin"
-                android:background="?android:attr/listDivider" />
+                android:layout_height="wrap_content"
+                android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
+                app:errorEnabled="true"
+                android:hint="@string/label_description">
 
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_marginStart="@dimen/activity_horizontal_margin"
-                android:layout_marginEnd="@dimen/activity_horizontal_margin"
-                android:orientation="vertical">
-
-                <TextView
-                    android:id="@+id/textViewDescription"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="@string/label_description"
-                    android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
-
-                <EditText
+                <com.google.android.material.textfield.TextInputEditText
                     android:id="@+id/editDescription"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:inputType="text" />
-            </LinearLayout>
+            </com.google.android.material.textfield.TextInputLayout>
 
-            <View
-                android:id="@+id/dividerDesc"
+            <com.google.android.material.textfield.TextInputLayout
+                android:id="@+id/editLensFocalLengthLayout"
                 android:layout_width="match_parent"
-                android:layout_height="1dp"
-                android:layout_marginTop="@dimen/activity_vertical_margin"
-                android:layout_marginBottom="@dimen/activity_vertical_margin"
-                android:background="?android:attr/listDivider" />
+                android:layout_height="wrap_content"
+                android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
+                android:hint="@string/label_lens_focal_length"
+                app:errorEnabled="true"
+                app:suffixText="@string/unit_suffix_mm">
 
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_marginStart="@dimen/activity_horizontal_margin"
-                android:layout_marginEnd="@dimen/activity_horizontal_margin"
-                android:orientation="vertical">
-
-                <TextView
-                    android:id="@+id/textViewLensFocalLength"
+                <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/editLensFocalLength"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="@string/label_lens_focal_length"
-                    android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
+                    android:ems="10"
+                    android:inputType="number" />
+            </com.google.android.material.textfield.TextInputLayout>
 
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:orientation="horizontal">
-
-                    <EditText
-                        android:id="@+id/editLensFocalLength"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:ems="10"
-                        android:inputType="number" />
-
-                    <TextView
-                        android:id="@+id/textViewLensFocalLengthUnits"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="@string/unit_suffix_mm" />
-
-                </LinearLayout>
-            </LinearLayout>
-
-            <View
-                android:id="@+id/dividerFocalLength"
+            <com.google.android.material.textfield.TextInputLayout
+                android:id="@+id/editHeightOffsetLayout"
                 android:layout_width="match_parent"
-                android:layout_height="1dp"
-                android:layout_marginTop="@dimen/activity_vertical_margin"
-                android:layout_marginBottom="@dimen/activity_vertical_margin"
-                android:background="?android:attr/listDivider" />
+                android:layout_height="wrap_content"
+                android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
+                android:hint="@string/label_enlarger_height_offset"
+                app:errorEnabled="true"
+                app:suffixText="@string/unit_suffix_mm">
 
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_marginStart="@dimen/activity_horizontal_margin"
-                android:layout_marginEnd="@dimen/activity_horizontal_margin"
-                android:orientation="vertical">
-
-                <TextView
-                    android:id="@+id/textViewHeightOffset"
+                <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/editHeightOffset"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="@string/label_enlarger_height_offset"
-                    android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:orientation="horizontal">
-
-                    <EditText
-                        android:id="@+id/editHeightOffset"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:ems="10"
-                        android:inputType="numberDecimal" />
-
-                    <TextView
-                        android:id="@+id/textViewHeightOffsetUnits"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="@string/unit_suffix_mm" />
-                </LinearLayout>
-            </LinearLayout>
-
-            <View
-                android:id="@+id/dividerHeightOffset"
-                android:layout_width="match_parent"
-                android:layout_height="1dp"
-                android:layout_marginTop="@dimen/activity_vertical_margin"
-                android:layout_marginBottom="@dimen/activity_vertical_margin"
-                android:background="?android:attr/listDivider" />
+                    android:ems="10"
+                    android:inputType="numberDecimal" />
+            </com.google.android.material.textfield.TextInputLayout>
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_marginStart="@dimen/activity_horizontal_margin"
-                android:layout_marginEnd="@dimen/activity_horizontal_margin"
                 android:orientation="vertical">
 
                 <TextView
                     android:id="@+id/textViewSmallerTest"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
+                    android:layout_marginBottom="@dimen/form_vertical_margin"
                     android:text="@string/label_smaller_test_exposure"
-                    android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
+                    android:textColor="@color/primaryColor"/>
 
-                <LinearLayout
+                <com.google.android.material.textfield.TextInputLayout
+                    android:id="@+id/editSmallerHeightLayout"
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:orientation="horizontal">
+                    android:layout_height="wrap_content"
+                    android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
+                    android:hint="@string/label_enlarger_height"
+                    app:errorEnabled="true"
+                    app:suffixText="@string/unit_suffix_mm">
 
-                    <EditText
+                    <com.google.android.material.textfield.TextInputEditText
                         android:id="@+id/editSmallerHeight"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:ems="10"
-                        android:hint="@string/label_enlarger_height"
                         android:inputType="number" />
+                </com.google.android.material.textfield.TextInputLayout>
 
-                    <TextView
-                        android:id="@+id/textViewSmallerHeightUnits"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="@string/unit_suffix_mm" />
-                </LinearLayout>
-
-                <LinearLayout
+                <com.google.android.material.textfield.TextInputLayout
+                    android:id="@+id/editSmallerTimeLayout"
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:orientation="horizontal">
+                    android:layout_height="wrap_content"
+                    android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
+                    android:hint="@string/label_exposure_time"
+                    app:errorEnabled="true"
+                    app:suffixText="@string/unit_suffix_seconds">
 
-                    <EditText
+                    <com.google.android.material.textfield.TextInputEditText
                         android:id="@+id/editSmallerTime"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:ems="10"
-                        android:hint="@string/label_exposure_time"
                         android:inputType="numberDecimal" />
-
-                    <TextView
-                        android:id="@+id/textViewSmallerTimeUnits"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="@string/unit_suffix_seconds" />
-                </LinearLayout>
-            </LinearLayout>
-
-            <View
-                android:id="@+id/dividerSmallerTest"
-                android:layout_width="match_parent"
-                android:layout_height="1dp"
-                android:layout_marginTop="@dimen/activity_vertical_margin"
-                android:layout_marginBottom="@dimen/activity_vertical_margin"
-                android:background="?android:attr/listDivider" />
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_marginStart="@dimen/activity_horizontal_margin"
-                android:layout_marginEnd="@dimen/activity_horizontal_margin"
-                android:orientation="vertical">
+                </com.google.android.material.textfield.TextInputLayout>
 
                 <TextView
                     android:id="@+id/textViewLargerTest"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
+                    android:layout_marginBottom="@dimen/form_vertical_margin"
                     android:text="@string/label_larger_test_exposure"
-                    android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
+                    android:textColor="@color/primaryColor"/>
 
-                <LinearLayout
+                <com.google.android.material.textfield.TextInputLayout
+                    android:id="@+id/editLargerHeightLayout"
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:orientation="horizontal">
+                    android:layout_height="wrap_content"
+                    android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
+                    android:hint="@string/label_enlarger_height"
+                    app:errorEnabled="true"
+                    app:suffixText="@string/unit_suffix_mm">
 
-                    <EditText
+                    <com.google.android.material.textfield.TextInputEditText
                         android:id="@+id/editLargerHeight"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:ems="10"
-                        android:hint="@string/label_enlarger_height"
                         android:inputType="number" />
+                </com.google.android.material.textfield.TextInputLayout>
 
-                    <TextView
-                        android:id="@+id/textViewLargerHeightUnits"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="@string/unit_suffix_mm" />
-                </LinearLayout>
-
-                <LinearLayout
+                <com.google.android.material.textfield.TextInputLayout
+                    android:id="@+id/editLargerTimeLayout"
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:orientation="horizontal">
+                    android:layout_height="wrap_content"
+                    android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
+                    android:hint="@string/label_exposure_time"
+                    app:errorEnabled="true"
+                    app:suffixText="@string/unit_suffix_seconds">
 
-                    <EditText
+                    <com.google.android.material.textfield.TextInputEditText
                         android:id="@+id/editLargerTime"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:ems="10"
-                        android:hint="@string/label_exposure_time"
                         android:inputType="numberDecimal" />
-
-                    <TextView
-                        android:id="@+id/textViewLargerTimeUnits"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="@string/unit_suffix_seconds" />
-                </LinearLayout>
+                </com.google.android.material.textfield.TextInputLayout>
             </LinearLayout>
         </LinearLayout>
     </ScrollView>
