--- a/app/src/main/res/layout/fragment_enlarger_edit.xml
+++ b/app/src/main/res/layout/fragment_enlarger_edit.xml
@@ -28,6 +28,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
                 app:errorEnabled="true"
+                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                 android:hint="@string/label_name">
 
                 <com.google.android.material.textfield.TextInputEditText
@@ -43,6 +44,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
                 app:errorEnabled="true"
+                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                 android:hint="@string/label_description">
 
                 <com.google.android.material.textfield.TextInputEditText
@@ -59,6 +61,7 @@
                 android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
                 android:hint="@string/label_lens_focal_length"
                 app:errorEnabled="true"
+                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                 app:suffixText="@string/unit_suffix_mm">
 
                 <com.google.android.material.textfield.TextInputEditText
@@ -76,6 +79,7 @@
                 android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
                 android:hint="@string/label_enlarger_height_offset"
                 app:errorEnabled="true"
+                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                 app:suffixText="@string/unit_suffix_mm">
 
                 <com.google.android.material.textfield.TextInputEditText
@@ -83,8 +87,15 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:ems="10"
-                    android:inputType="numberDecimal" />
+                    android:inputType="numberSigned|numberDecimal" />
             </com.google.android.material.textfield.TextInputLayout>
+
+            <View
+                android:id="@+id/divider"
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:layout_marginBottom="@dimen/form_vertical_margin"
+                android:background="?android:attr/listDivider" />
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -98,7 +109,8 @@
                     android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
                     android:layout_marginBottom="@dimen/form_vertical_margin"
                     android:text="@string/label_smaller_test_exposure"
-                    android:textColor="@color/primaryColor"/>
+                    android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle2"
+                    android:textColor="@color/primaryColor" />
 
                 <com.google.android.material.textfield.TextInputLayout
                     android:id="@+id/editSmallerHeightLayout"
@@ -107,6 +119,7 @@
                     android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
                     android:hint="@string/label_enlarger_height"
                     app:errorEnabled="true"
+                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                     app:suffixText="@string/unit_suffix_mm">
 
                     <com.google.android.material.textfield.TextInputEditText
@@ -124,6 +137,7 @@
                     android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
                     android:hint="@string/label_exposure_time"
                     app:errorEnabled="true"
+                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                     app:suffixText="@string/unit_suffix_seconds">
 
                     <com.google.android.material.textfield.TextInputEditText
@@ -141,6 +155,7 @@
                     android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
                     android:layout_marginBottom="@dimen/form_vertical_margin"
                     android:text="@string/label_larger_test_exposure"
+                    android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle2"
                     android:textColor="@color/primaryColor"/>
 
                 <com.google.android.material.textfield.TextInputLayout
@@ -150,6 +165,7 @@
                     android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
                     android:hint="@string/label_enlarger_height"
                     app:errorEnabled="true"
+                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                     app:suffixText="@string/unit_suffix_mm">
 
                     <com.google.android.material.textfield.TextInputEditText
@@ -167,6 +183,7 @@
                     android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
                     android:hint="@string/label_exposure_time"
                     app:errorEnabled="true"
+                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                     app:suffixText="@string/unit_suffix_seconds">
 
                     <com.google.android.material.textfield.TextInputEditText
