--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -4,8 +4,11 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <data>
+
         <import type="org.logicprobe.printsizer.ui.Converter" />
-        <import type="android.view.View"/>
+
+        <import type="android.view.View" />
+
         <variable
             name="homeViewModel"
             type="org.logicprobe.printsizer.ui.home.HomeViewModel" />
@@ -27,124 +30,110 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="vertical">
+                android:orientation="vertical"
+                android:paddingTop="@dimen/activity_vertical_margin">
 
-                <LinearLayout
+                <TextView
+                    android:id="@+id/textViewSmallerPrint"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
-                    android:layout_marginVertical="@dimen/activity_vertical_margin"
-                    android:orientation="vertical">
+                    android:layout_marginBottom="@dimen/form_vertical_margin"
+                    android:text="@string/label_smaller_print"
+                    android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
+                    android:textColor="@color/primaryColor" />
 
-                    <TextView
-                        android:id="@+id/textViewSmallerPrint"
-                        android:layout_width="match_parent"
+
+                <com.google.android.material.textfield.TextInputLayout
+                    android:id="@+id/editSmallerHeightLayout"
+                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
+                    android:hint="@string/label_enlarger_height"
+                    app:errorEnabled="true"
+                    app:suffixText="@string/unit_suffix_mm">
+
+                    <com.google.android.material.textfield.TextInputEditText
+                        android:id="@+id/editSmallerHeight"
+                        android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="@string/label_smaller_print"
-                        android:textAppearance="@style/TextAppearance.AppCompat.Large" />
+                        android:ems="10"
+                        android:inputType="number" />
+                </com.google.android.material.textfield.TextInputLayout>
 
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:orientation="horizontal">
+                <com.google.android.material.textfield.TextInputLayout
+                    android:id="@+id/editSmallerTimeLayout"
+                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
+                    android:hint="@string/label_exposure_time"
+                    app:errorEnabled="true"
+                    app:suffixText="@string/unit_suffix_seconds">
 
-                        <EditText
-                            android:id="@+id/editSmallerHeight"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:ems="10"
-                            android:hint="@string/label_enlarger_height"
-                            android:inputType="number" />
-
-                        <TextView
-                            android:id="@+id/textViewSmallerHeightUnits"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:text="@string/unit_suffix_mm" />
-                    </LinearLayout>
-
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:orientation="horizontal">
-
-                        <EditText
-                            android:id="@+id/editSmallerTime"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:ems="10"
-                            android:hint="@string/label_exposure_time"
-                            android:inputType="numberDecimal" />
-
-                        <TextView
-                            android:id="@+id/textViewSmallerTimeUnits"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:text="@string/unit_suffix_seconds" />
-                    </LinearLayout>
-                </LinearLayout>
+                    <com.google.android.material.textfield.TextInputEditText
+                        android:id="@+id/editSmallerTime"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:ems="10"
+                        android:inputType="numberDecimal" />
+                </com.google.android.material.textfield.TextInputLayout>
 
                 <View
+                    android:id="@+id/divider"
                     android:layout_width="match_parent"
                     android:layout_height="1dp"
+                    android:layout_marginBottom="@dimen/form_vertical_margin"
                     android:background="?android:attr/listDivider" />
 
-                <LinearLayout
+                <TextView
+                    android:id="@+id/textViewLargerPrint"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
-                    android:layout_marginVertical="@dimen/activity_vertical_margin"
-                    android:orientation="vertical">
+                    android:layout_marginBottom="@dimen/form_vertical_margin"
+                    android:text="@string/label_larger_print"
+                    android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
+                    android:textColor="@color/primaryColor" />
 
-                    <TextView
-                        android:id="@+id/textViewLargerPrint"
-                        android:layout_width="match_parent"
+                <com.google.android.material.textfield.TextInputLayout
+                    android:id="@+id/editLargerHeightLayout"
+                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
+                    android:hint="@string/label_enlarger_height"
+                    app:errorEnabled="true"
+                    app:suffixText="@string/unit_suffix_mm">
+
+                    <com.google.android.material.textfield.TextInputEditText
+                        android:id="@+id/editLargerHeight"
+                        android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="@string/label_larger_print"
-                        android:textAppearance="@style/TextAppearance.AppCompat.Large" />
+                        android:ems="10"
+                        android:inputType="number" />
+                </com.google.android.material.textfield.TextInputLayout>
 
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:orientation="horizontal">
+                <com.google.android.material.textfield.TextInputLayout
+                    android:id="@+id/editLargerTimeLayout"
+                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
+                    android:hint="@string/label_exposure_time"
+                    app:errorEnabled="true"
+                    app:suffixText="@string/unit_suffix_seconds">
 
-                        <EditText
-                            android:id="@+id/editLargerHeight"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:ems="10"
-                            android:hint="@string/label_enlarger_height"
-                            android:inputType="number" />
-
-                        <TextView
-                            android:id="@+id/textViewLargerHeightUnits"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:text="@string/unit_suffix_mm" />
-                    </LinearLayout>
-
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:orientation="horizontal">
-
-                        <EditText
-                            android:id="@+id/editLargerTime"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:ems="10"
-                            android:text="@{Converter.calculatedTimeToString(homeViewModel.largerPrintExposureTime)}"
-                            android:hint="@string/label_exposure_time"
-                            android:inputType="none"
-                            android:editable="false" />
-
-                        <TextView
-                            android:id="@+id/textViewLargerTimeUnits"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:text="@string/unit_suffix_seconds" />
-                    </LinearLayout>
-                </LinearLayout>
+                    <com.google.android.material.textfield.TextInputEditText
+                        android:id="@+id/editLargerTime"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:editable="false"
+                        android:ems="10"
+                        android:inputType="none"
+                        android:text="@{Converter.calculatedTimeToString(homeViewModel.largerPrintExposureTime)}" />
+                </com.google.android.material.textfield.TextInputLayout>
 
                 <View
                     android:layout_width="match_parent"
@@ -155,31 +144,31 @@
                     android:id="@+id/layoutEnlarger"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:paddingHorizontal="@dimen/activity_horizontal_margin"
-                    android:paddingVertical="@dimen/activity_vertical_margin"
-
-                    android:foreground="?android:attr/selectableItemBackground"
                     android:clickable="true"
-                    android:orientation="vertical">
+                    android:foreground="?android:attr/selectableItemBackground"
+
+                    android:orientation="vertical"
+                    android:paddingHorizontal="@dimen/activity_horizontal_margin"
+                    android:paddingVertical="@dimen/activity_vertical_margin">
 
                     <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
-                        android:visibility="@{homeViewModel.enlargerProfile.id == 0 ? View.VISIBLE : View.INVISIBLE}"
-                        android:orientation="horizontal">
+                        android:orientation="horizontal"
+                        android:visibility="@{homeViewModel.enlargerProfile.id == 0 ? View.VISIBLE : View.INVISIBLE}">
 
                         <TextView
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_gravity="center_vertical"
                             android:text="@string/action_choose_enlarger_profile"
-                            android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>
+                            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
                     </LinearLayout>
 
                     <RelativeLayout
-                        android:visibility="@{homeViewModel.enlargerProfile.id > 0 ? View.VISIBLE : View.INVISIBLE}"
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content">
+                        android:layout_height="wrap_content"
+                        android:visibility="@{homeViewModel.enlargerProfile.id > 0 ? View.VISIBLE : View.INVISIBLE}">
 
                         <TextView
                             android:id="@+id/name"
