Update editor to support adding enlarger without test exposures

--- a/app/src/main/res/layout/fragment_enlarger_edit.xml
+++ b/app/src/main/res/layout/fragment_enlarger_edit.xml
@@ -8,7 +8,6 @@
     tools:context=".ui.enlargers.EnlargerEditFragment">
 
     <ScrollView
-        android:id="@+id/scrollView2"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -17,6 +16,7 @@
         app:layout_constraintTop_toTopOf="parent">
 
         <LinearLayout
+            android:id="@+id/mainContentLayout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
