--- a/app/src/main/res/layout/dialog_choose_enlarger_profile_item.xml
+++ b/app/src/main/res/layout/dialog_choose_enlarger_profile_item.xml
@@ -21,6 +21,8 @@
         android:layout_marginStart="8dp"
         android:layout_marginEnd="8dp"
         android:paddingVertical="8dp"
+        android:clipChildren="false"
+        android:clipToPadding="false"
         android:clickable="true"
         android:onClick="@{() ->  callback.onClickProfile(enlargerProfile)}"
         android:foreground="?android:attr/selectableItemBackground">
@@ -53,13 +55,29 @@
 
             <TextView
                 android:id="@+id/description"
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_below="@id/name"
+                android:layout_alignParentStart="true"
+                android:layout_toStartOf="@+id/typeChip"
                 android:ellipsize="end"
                 android:maxLines="1"
                 android:text="@{enlargerProfile.description}"
                 android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
+
+            <com.google.android.material.chip.Chip
+                android:id="@+id/typeChip"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentEnd="true"
+                android:layout_alignParentBottom="true"
+                app:ensureMinTouchTargetSize="false"
+                android:clickable="false"
+                android:checkable="false"
+                android:longClickable="false"
+                android:translationY="2dp"
+                app:chipMinHeight="24dp"
+                android:text="@{enlargerProfile.hasTestExposures ? @string/label_enlarger_profile_calibrated : @string/label_enlarger_profile_uncalibrated}"/>
         </RelativeLayout>
 
     </LinearLayout>
