--- a/app/src/main/res/layout/enlarger_profile_item.xml
+++ b/app/src/main/res/layout/enlarger_profile_item.xml
@@ -23,13 +23,17 @@
         android:onClick="@{() ->  callback.onClick(enlargerProfile)}"
         android:foreground="?android:attr/selectableItemBackground"
         android:background="@drawable/background_selectable_item"
-        app:cardUseCompatPadding="true">
+        app:cardUseCompatPadding="true"
+        android:clipToPadding="false"
+        android:clipChildren="false">
 
         <RelativeLayout
             android:layout_marginStart="8dp"
             android:layout_marginEnd="8dp"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:clipToPadding="false"
+            android:clipChildren="false">
 
             <TextView
                 android:id="@+id/name"
@@ -53,13 +57,29 @@
 
             <TextView
                 android:id="@+id/description"
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_alignParentStart="true"
+                android:layout_below="@id/name"
+                android:layout_toStartOf="@+id/typeChip"
                 android:ellipsize="end"
                 android:maxLines="1"
-                android:layout_below="@id/name"
                 android:text="@{enlargerProfile.description}"
                 android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
+
+            <com.google.android.material.chip.Chip
+                android:id="@+id/typeChip"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentEnd="true"
+                android:layout_alignParentBottom="true"
+                app:ensureMinTouchTargetSize="false"
+                android:clickable="false"
+                android:checkable="false"
+                android:longClickable="false"
+                android:translationY="2dp"
+                app:chipMinHeight="24dp"
+                android:text="@{enlargerProfile.hasTestExposures ? @string/label_enlarger_profile_calibrated : @string/label_enlarger_profile_uncalibrated}"/>
         </RelativeLayout>
     </LinearLayout>
 </layout>
