--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -143,6 +143,8 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:clickable="true"
+                    android:clipToPadding="false"
+                    android:clipChildren="false"
                     android:foreground="?android:attr/selectableItemBackground"
 
                     android:orientation="vertical"
@@ -173,6 +175,8 @@
                     <RelativeLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
+                        android:clipChildren="false"
+                        android:clipToPadding="false"
                         android:visibility="@{homeViewModel.enlargerProfile.id > 0 ? View.VISIBLE : View.INVISIBLE}">
 
                         <TextView
@@ -193,22 +197,46 @@
 
                         <TextView
                             android:id="@+id/description"
-                            android:layout_width="match_parent"
+                            android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_below="@id/name"
+                            android:layout_alignParentStart="true"
+                            android:layout_toStartOf="@id/indicatorLayout"
+                            android:ellipsize="end"
+                            android:maxLines="1"
                             android:text="@{homeViewModel.enlargerProfile.description}"
                             android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
+
+                        <LinearLayout
+                            android:id="@+id/indicatorLayout"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_alignParentEnd="true"
+                            android:layout_alignParentBottom="true"
+                            android:clipToPadding="false"
+                            android:clipChildren="false"
+                            android:orientation="horizontal">
+
+                            <com.google.android.material.chip.Chip
+                                android:id="@+id/enlargerProfileTypeChip"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                app:ensureMinTouchTargetSize="false"
+                                android:clickable="false"
+                                android:checkable="false"
+                                android:longClickable="false"
+                                android:translationY="2dp"
+                                app:chipMinHeight="24dp"/>
+
+                            <ImageView
+                                android:id="@+id/enlargerProfileErrorView"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:src="@android:drawable/stat_notify_error"
+                                android:tint="@color/errorColor"
+                                android:visibility="gone"/>
+                        </LinearLayout>
                     </RelativeLayout>
-
-                    <ImageView
-                        android:id="@+id/enlargerProfileErrorView"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="end|bottom"
-                        android:src="@android:drawable/stat_notify_error"
-                        android:tint="@color/errorColor"
-                        android:visibility="gone"/>
-
                 </FrameLayout>
 
                 <View
